tests/typec-test/test_out/spec-with-funcs.txt
error: 'param 0' does not implement '0\Glue'
  --> spec-with-funcs\root.ctl:14:10
   |
14 |     G\new().use_on(value)
   |          ^^ when calling this
   |

error: cannot infer type of parameters[1]
  --> spec-with-funcs\root.ctl:14:19
   |
14 |     G\new().use_on(value)
   |                   ^^^^^^^ while instantiating this call
   |

info: tir repr of functions:
 fn [todo] uint\0\new() -> uint return 0

fn [todo] uint\0\use_on(var0: uint, var1: param 0) -> 0\Glued[param 0] return 0\Glued[param 0]\{var1}



